# XBVLisp

./: README.md  xbvlisp_2.2-1_i386.deb
Simple_Lisp_Interpreter/: eval.c  llisp.doc  llisp.ini  main.c  main.h  makefile  mem.c  print.c  read.c  std.c
bvl-2.2.4/: AUTHORS  Makefile.am  Makefile.in  aclocal.m4  configure  configure.in
bvl-2.2.4/include/: Makefile.am  Makefile.in  cr_ex.h  fons.h  proto.h  vlisp.h
bvl-2.2.4/other_expls/: All.uses  Makefile.in  analyse.vlisp  consp.ps  consp.vlisp  driveGL.vlisp  dyn-tree.vlisp  face.vlisp  fdraw.vlisp  g-pretty.vlisp  mon.vlisp  xfile.vlisp
bvl-2.2.4/src_data/: LisptoTex  Makefile.in  Tree.vlisp  adapt.sed  conte.vlisp  conv.vlisp  essai.vlisp  gg.vlisp  i-val.vlisp  lisp_names.h  paraf.vlisp  phenar.vlisp  rev.vlisp  test.vlisp
bvl-2.2.4/src_lisp/: Makefile.am  Makefile.in  err.c  eval.c  gc.c  hash.c  in.c  ind.c  init.c_orig  main.c  misc.c  mod.c  out.c_orig  sofons.c  spec.c
xbvl-2.2.2/: ChangeLog  Makefile.in  configure  configure.in  newfuncs
xbvl-2.2.2-light/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  XbVLISP  aclocal.m4  configure  configure.in  foobar
xbvl-2.2.2-light/include/: DrawXbvlP.h  Makefile.am  Makefile.in  XbvlispP.h  actions.h  fons.h.old  genDecl.h  vlisp.h.orig  vlisp_files.h  vlisp_files.h.in  xaide.h
xbvl-2.2.2-light/lsp_expls/: Makefile.in
xbvl-2.2.2-light/lsp_expls/X/: DrawTst.vlisp  ListTst.vlisp  Makefile.am  Makefile.in  Menus.vlisp  Tortue.vlisp  WdgLib.vlisp  hanoi.vlisp  monitor.vlisp  showtree.lsp  test-gc.vlisp  xDemos.vlisp  xHabit.vlisp  xinfos.vlisp  xpredicats.vlisp  xsetvals.vlisp
xbvl-2.2.2-light/other_expls/: Makefile.am  Makefile.in  bvlisp.ini.01  foo.vlisp  gldefs.vlisp  ol.vlisp  old-anal.vlisp  pretty.vlisp  sets.vlisp  vreal.vlisp
xbvl-2.2.2-light/src_data/: GL-drive.vlisp  GL-lib.vlisp  Makefile.am  Makefile.in  NewComms.txt  aidvl-so.txt  aidvl2.txt  azer.demo  bvlisp.ini  bvlisp.sys  cour.vlisp  editAide.txt  eff.vlisp  eval1.vlisp  getdoc.vlisp  mon.vlisp  rain.vlisp  record.vlisp  simpl.vlisp  test.demo  trac1.vlisp  widget.vlisp
xbvl-2.2.2-light/src_lisp/: Makefile.in  car.c  contro.c  gc.c  list.c  main.c  num.c  out.c  strings.c
xbvl-2.2.2-light/src_x/: Makefile.in  ObjInit.c  xActions.c  xgetargs.c  xinit.c  xmenu.c
xbvl-2.2.2/include/: BrTree.h  Tortue.h  aide.h  assert.h  curses.h  glXbvlaux.h  vcurses.h  vlisp.h  vlisp_files.h  xwin.h
xbvl-2.2.2/lsp_expls/GL/: GLtextures.vlisp  GLturing.vlisp
xbvl-2.2.2/lsp_expls/X/: Arbre.vlisp  Dialog.vlisp  NewClass.vlisp  Panel.vlisp  bar.vlisp  debug.vlisp  diff.vlisp  xDemo3.vlisp
xbvl-2.2.2/other_expls/: all.uses  bvlisp.ini  bvlisp.ini.old  cons-p.vlisp  copy.vlisp  cubic.vlisp  eraf.vlisp  match.cross  memory.vlisp  rfaces.vlisp  seraf.vlisp  uses.vlisp  vcg.vlisp
xbvl-2.2.2/src_data/: .bash_history  LisptoTex  Makefile.in  README  adapte  aidbvlisp.c  bvlisp.sys  ef-pg.vlisp  eval.vlisp  io.vlisp  match.ccl  match.vlisp  minser.vlisp  mon.vlisp.ok  profib.vlisp  prt-pg.vlisp  tortue.vlisp  trace.vlisp  vcg.vlisp
xbvl-2.2.2/src_data/auto/: a.el  aidvl1.el
xbvl-2.2.2/src_data/bitmap/: bitmap.Z  c-bottom  c-front  c-left  c-rear  c-right  c-top  context  deep  down  front  l-bottom  l-center  l-front  l-left  l-rear  l-right  l-top  left  maison  node.bit  right  rotate-x+  rotate-x-  rotate-y+  rotate-y-  rotate-z+  rotate-z-  std-tree  up  zoom  zoom+  zoom-  zoom-in  zoom-out
xbvl-2.2.2/src_hershey/: Makefile.in  check.c  fdisp.c  getchar.c  h2v  h2v.h  hdisp.c  hershey.h  htext.c
xbvl-2.2.2/src_lisp/: .bash_history  .bvlisp-der  Makefile.in  Zeugma-Help.:dat  Zeugma-Help.:sec  dlist.c  essaiGL  fdate.c  gc.c  in.c  menu.c  mesaListes.c  sofons.c  xgetvals.c
xbvl-2.2.2/src_mesa/: Makefile.in  addon_dlist.c
xbvl-2.2.2/src_open_gl/: .bash_history  Makefile.in  glFonts.c  glFuncs.c  glFuncs.c.i  glImages.c  glLib.c  glLights.c  glMemory.c  glTexture.c  glWidget.c  gluFuncs.c  mesaListes.c
xbvl-2.2.2/src_x/: BrTree.c  Convert.c  Makefile.in  Tortue.c  XbvlVideo.c  xCalbks.c  xDraw.c  xEvent.c  xTranslation.c  xsetvals.c  xsrc.c
xbvl-2.2.3-light/: Makefile.in  NEWS  README  aclocal.m4  configure  configure.in
xbvl-2.2.3-light/include/: BrTreeP.h  Drawxbvl.h  Makefile.am  Makefile.in  Objets.h  R3toR4.h  TortueP.h  glTrans.h  glXbvl.h  proto.h  vlisp_files.h
xbvl-2.2.3-light/lsp_expls/: Makefile.am
xbvl-2.2.3-light/lsp_expls/X/: Aide.vlisp  Popup.vlisp  Tree.vlisp  drawarcs.vlisp  pnbs.vlisp  prueba.vlisp  xcree.vlisp
xbvl-2.2.3-light/other_expls/: EDIT.vlisp  azer.vlisp  bvlisp.sys  dynface.vlisp  meters.vlisp  oo  ow.vlisp  widget.vlisp
xbvl-2.2.3-light/src_data/: EDIT.vlisp  GL-drive.vlisp  LisptoTex.c  aidvl1.txt  aidvlr.txt  boy.vlisp  lisp_names.h  min.vlisp  permut.vlisp  rec.vlisp  stp.vlisp  trace-pg.vlisp  xbvl.el
xbvl-2.2.3-light/src_lisp/: Makefile  Makefile.am  Makefile.in  aide.c  eval.c  fil.c  flo.c  main.c  misc.c  prolog.c  spec.c  str.c
xbvl-2.2.3-light/src_x/: Makefile.am  Xbvlisp.c  XtToLISP.c  xBitmap.c  xGetRes.c  xWdgFncs.c  xgetvals.c  xpointer.c  xwst.c
xbvl-2.2.3-light_work/: INSTALL.0  Makefile  Makefile.am  changelog  config.status
xbvl-2.2.3-light_work/include/: DrawXbvlP.h  DrawxbvlP.h  Makefile  Xbvlisp.h  fons.h  xwin.h
xbvl-2.2.3-light_work/lsp_expls/: Makefile  Makefile.in
xbvl-2.2.3-light_work/other_expls/: Makefile  Makefile.am  Makefile.in  gstack.vlisp  i-val.vlisp  list-editor.vlisp  pic.vlisp  prtt.vlisp  visages.vlisp
xbvl-2.2.3-light_work/src_data/: GL-Drive-Help.txt  LisptoTex  Makefile  Makefile.in  X-Menus.vlisp  aidvl-gl.txt  all.vlisp  con.vlisp  cons-p.vlisp  lib.vlisp  libpro.vlisp  pretty.vlisp  prt.vlisp  prtt.vlisp  stepper.vlisp  tfunc.vlisp  traaide.c  traaide.script  vcg.cro  vlisp.ini  xfile.vlisp
xbvl-2.2.3-light_work/src_lisp/: Makefile  fil.c  gc.c  hash.c  ind.c  indinit.c  init.c  init.c_orig  mod.c  out.c
xbvl-2.2.3-light_work/src_x/: BrTree.c  Drawxbvl.c  Makefile  Makefile.in  ObjAtome.c  XbvlActn.c  crewin.c  cursor.c  xCrObjet.c  xaide.c  xcrewin.c  xgetch.c  xkill.c  xvter.c
(+23 files in other folders)
