EXTRA_DIST = BrTree.h BrTreeP.h DrawXbvlP.h Drawxbvl.h DrawxbvlP.h Objets.h R3toR4.h Tortue.h TortueP.h \
	Xbvlisp.h XbvlispP.h actions.h aide.h assert.h cr_ex.h curses.h fons.h fons.h.old genDecl.h \
	glTrans.h glXbvl.h glXbvlaux.h proto.h vcurses.h vlisp.h vlisp.h.orig vlisp_files.h xaide.h \
	xwin.h
