noinst_LIBRARIES = libxbvlx.a

INCLUDES = -I$(top_srcdir)/include
CFLAGS = @CFLAGS@ @XAW_DIR@ @X_USE_LATIN1@

libxbvlx_a_SOURCES = BrTree.c Convert.c Drawxbvl.c ObjAtome.c \
	ObjInit.c Tortue.c XbvlActn.c XbvlVideo.c Xbvlisp.c XtToLISP.c \
	crewin.c cursor.c \
	xActions.c xBitmap.c xCalbks.c xCrObjet.c xDraw.c \
	xEvent.c xGetRes.c xTranslation.c xWdgFncs.c xaide.c \
	xcrewin.c xgetargs.c xgetch.c xgetvals.c xinit.c xkill.c \
	xmenu.c xpointer.c xsetvals.c xsrc.c xvter.c xwst.c 
