EXTRA_DIST = All.uses EDIT.vlisp all.uses analyse.vlisp azer.vlisp bvlisp.ini \
bvlisp.sys cons-p.vlisp consp.ps consp.vlisp copy.vlisp cubic.vlisp driveGL.vlisp \
dyn-tree.vlisp dynface.vlisp eraf.vlisp face.vlisp fdraw.vlisp foo.vlisp g-pretty.vlisp \
gldefs.vlisp gstack.vlisp i-val.vlisp list-editor.vlisp match.cross memory.vlisp meters.vlisp \
mon.vlisp ol.vlisp old-anal.vlisp oo ow.vlisp pic.vlisp pretty.vlisp prtt.vlisp rfaces.vlisp \
seraf.vlisp sets.vlisp tfunc.vlisp uses.vlisp vcg.vlisp visages.vlisp vreal.vlisp widget.vlisp \
xfile.vlisp

data_DATA = $(EXTRA_DIST)

datadir = ${prefix}/share/xbvlisp/examples_other
