EXTRA_DIST = Aide.vlisp Arbre.vlisp Dialog.vlisp DrawTst.vlisp L-syst.vlisp ListTst.vlisp Menus.vlisp \
NewClass.vlisp Panel.vlisp Popup.vlisp Tortue.vlisp Tree.vlisp WdgLib.vlisp bar.vlisp \
debug.vlisp diff.vlisp drawarcs.vlisp hanoi.vlisp index.vlisp monitor.vlisp pnbs.vlisp \
prueba.vlisp showTree.vlisp showtree.lsp test-gc.vlisp torture.vlisp traduc.vlisp xDemo3.vlisp \
xDemos.vlisp xHabit.vlisp xValues.vlisp xcHier.vlisp xcWdgts.vlisp xcree.vlisp xgetvals.vlisp \
xgraphic.vlisp xinfos.vlisp xpredicats.vlisp xsetvals.vlisp xvals.vlisp

data_DATA = $(EXTRA_DIST)

datadir = ${prefix}/share/xbvlisp/examples_x
